--- a/index.html
+++ b/index.html
@@ -10,29 +10,31 @@
     <h1>
         <div class="Calculator">
             <div class="display">0</div>
-            <div class="button">
+            <div class="buttons">
                 <button class="button">C</button>
                 <button class="button">+/-</button>
                 <button class="button">%</button>
-                <button class="buttonoperator">÷</button>
+                <button class="button operator">÷</button>
                 <button class="button">7</button>
                 <button class="button">8</button>
                 <button class="button">9</button>
-                <button class="buttonoperator">×</button>
+                <button class="button operator">×</button>
                 <button class="button">4</button>
                 <button class="button">5</button>
                 <button class="button">6</button>
-                <button class="buttonoperator">-</button>
+                <button class="button operator">-</button>
                 <button class="button">1</button>
                 <button class="button">2</button>
                 <button class="button">3</button>
-                <button class="buttonoperator">+</button>
+                <button class="button operator">+</button>
+                <button class="buttondelete">↩</button>
                 <button class="buttonzero">0</button>
                 <button class="button">.</button>
-                <button class="buttondelete">↩</button>
-                <button class="button">=</button>
+                <button class="button operator">=</button>
             </div>
         </div>
+        Simple Calculator
     </h1>
+    
 </body>
 </html>
